# trimmly

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  compose.yml  main.py  pyproject.toml  ruff.toml
app/: config.py  dependencies.py  exceptions.py  flash_message.py  lifespan.py  logger.py  server.py  utils.py
app/database/: cache.py  db.py
app/models/: base.py  url.py
app/routers/: router.py  urls.py
app/routers/pages/: create_homepage.py
app/schemas/: url.py
app/services/: kgs.py  metrics.py  url.py
app/static/: styles.css
app/templates/: base.html  create.html  shortened.html  shortener.html
app/templates/components/: notification.html
migration/: env.py
migration/versions/: 37c8fc365f07_generate_base_url_mapping.py  63ee6b6fd549_generate_base_url_mapping.py
